Adding privacy policy and contact us page

--- a/src/app/core/components/footer/footer.html
+++ b/src/app/core/components/footer/footer.html
@@ -101,7 +101,7 @@
            
             <span class="flex items-end gap-2">جميع الحقوق محفوظة بيت التكنولوجيا<img src="/images/logo/tech-house.webp" alt="" class="w-12 ">© 2026</span>
           </div>
-          <a href="#" class="footer-lower-link">سياسة الخصوصية</a>
+          <a routerLink="/privacy-policy" class="footer-lower-link cursor-pointer">سياسة الخصوصية</a>
         </div>
       </div>
     </div>
