--- a/src/app/features/home/home-categories/home-categories.html
+++ b/src/app/features/home/home-categories/home-categories.html
@@ -17,10 +17,10 @@
             <!-- Categories grid (right side) -->
             <div class="lg:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-6">
                 @for (department of departments(); track department.slug) {
-                    <div class="category-card bg-[#FFE066] rounded-2xl p-6 relative overflow-hidden shadow-lg">
+                    <div class="category-card rounded-2xl relative overflow-hidden shadow-lg">
                         <div class="flex flex-col items-center justify-center h-full min-h-100">
-                            <div class="relative mb-4">
-                                <div class="w-24 h-24 bg-black rounded-full flex items-center justify-center shadow-[0_0_20px_rgba(208,165,26,0.8)] overflow-hidden">
+                            <div class="relative">
+                                <div class=" bg-black flex items-center justify-center shadow-[0_0_20px_rgba(208,165,26,0.8)] overflow-hidden">
                                     <img [src]="department.main_image" [alt]="department.name" 
                                         class="w-full h-full object-cover" />
                                 </div>
@@ -29,7 +29,7 @@
                         <!-- Hover Overlay -->
                         <div class="card-overlay">
                             <div class="flex justify-center items-center gap-2">
-                                <div class="w-4 h-4 bg-[#D0A51A] rounded-full"></div>
+                                <div class=" bg-[#D0A51A] rounded-full"></div>
                                 <h3 class="text-white text-2xl font-bold">{{ department.name }}</h3>
                             </div>
                             <a [routerLink]="['/department', department.slug]"
