--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -1,10 +1,13 @@
-/* Markazi Text Font */
+/* Markazi Text Font - Arabic display font for headings */
 @font-face {
     font-family: 'Markazi Text';
     src: url('./markazi/MarkaziText-Regular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
+    size-adjust: 105%;
+    ascent-override: 95%;
+    descent-override: 25%;
 }
 
 @font-face {
@@ -13,7 +16,9 @@
     font-weight: 500;
     font-style: normal;
     font-display: swap;
-
+    size-adjust: 105%;
+    ascent-override: 95%;
+    descent-override: 25%;
 }
 
 @font-face {
@@ -22,18 +27,21 @@
     font-weight: 700;
     font-style: normal;
     font-display: swap;
-
+    size-adjust: 105%;
+    ascent-override: 95%;
+    descent-override: 25%;
 }
 
-/* Tajawal Font */
+/* Tajawal Font - Arabic body text font */
 @font-face {
     font-family: 'Tajawal';
     src: url('./tajawal/Tajawal-Regular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-
-
+    size-adjust: 100%;
+    ascent-override: 90%;
+    descent-override: 22%;
 }
 
 @font-face {
@@ -42,7 +50,9 @@
     font-weight: 500;
     font-style: normal;
     font-display: swap;
-
+    size-adjust: 100%;
+    ascent-override: 90%;
+    descent-override: 22%;
 }
 
 @font-face {
@@ -51,5 +61,7 @@
     font-weight: 700;
     font-style: normal;
     font-display: swap;
-
+    size-adjust: 100%;
+    ascent-override: 90%;
+    descent-override: 22%;
 }
