--- a/src/app/features/home/home-about/home-about.html
+++ b/src/app/features/home/home-about/home-about.html
@@ -15,16 +15,16 @@
             <div class="pt-10 lg:pt-0 lg:mt-0 lg:ms-auto relative h-full z-10!">
                 <!-- Social Media Strip -->
                 <div class="social-strip flex flex-col items-center justify-between">
-                    <a href="#" class="social-icon" aria-label="Facebook">
+                    <a [href]="facebookUrl()" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook">
                         <img src="images/icons/facebook.webp" alt="Facebook" width="24" height="24" />
                     </a>
-                    <a href="#" class="social-icon" aria-label="TikTok">
+                    <a [href]="tiktokUrl()" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="TikTok">
                         <img src="images/icons/tiktok.webp" alt="TikTok" width="24" height="24" />
                     </a>
-                    <a href="#" class="social-icon" aria-label="Instagram">
+                    <a [href]="instagramUrl()" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Instagram">
                         <img src="images/icons/insta.webp" alt="Instagram" width="24" height="24" />
                     </a>
-                    <a href="#" class="social-icon" aria-label="X">
+                    <a [href]="twitterUrl()" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="X">
                         <img src="images/icons/x.webp" alt="X" width="24" height="24" />
                     </a>
                 </div>
