--- a/src/app/features/home/home-categories/home-categories.html
+++ b/src/app/features/home/home-categories/home-categories.html
@@ -18,11 +18,11 @@
             <div class="lg:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-6">
                 @for (department of departments(); track department.slug) {
                     <div class="category-card rounded-2xl relative overflow-hidden shadow-lg">
-                        <div class="flex flex-col items-center justify-center h-full min-h-100">
+                        <div class="flex flex-col items-center justify-center h-full ">
                             <div class="relative">
                                 <div class=" bg-black flex items-center justify-center shadow-[0_0_20px_rgba(208,165,26,0.8)] overflow-hidden">
                                     <img [src]="department.main_image" [alt]="department.name" 
-                                        class="w-full h-full object-cover" />
+                                        class="w-full h-full! object-cover" />
                                 </div>
                             </div>
                         </div>
