--- a/src/app/features/gold-calculator/gold-calculator.css
+++ b/src/app/features/gold-calculator/gold-calculator.css
@@ -3,6 +3,18 @@
   min-height: 60vh;
 }
 
+/* Hide number input arrows/spinners */
+.weight-input::-webkit-outer-spin-button,
+.weight-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.weight-input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
 /* Calculator Card */
 .calc-card {
   border: 1px solid rgba(0, 0, 0, 0.05);
