--- a/src/app/core/components/footer/footer.html
+++ b/src/app/core/components/footer/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-upper">
     <img src="/images/footer.webp" alt="" class="footer-bg-img" />
     <div class="container mx-auto px-5 lg:px-20 py-12">
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 " >
         
         <!-- Rightmost Column: Logo and Description -->
         <div class="footer-column footer-logo-column">
@@ -34,8 +34,8 @@
           <img src="/images/fram.webp" alt="" class="footer-frame" />
           <ul class="footer-links">
             <li><a routerLink="/about-us" class="footer-link text-sm! font-semibold!">من نحن</a></li>
-            <li><a routerLink="/gold-calculator" class="footer-link text-sm! font-semibold!">حاسبة الذهب</a></li>
-            <li><a routerLink="/department/أسعار-الذهب" class="footer-link text-sm! font-semibold!">أسعار الذهب</a></li>
+            <li><a routerLink="/gold-price" class="footer-link text-sm! font-semibold!">حاسبة الذهب</a></li>
+            <li><a routerLink="/metals-calculator" class="footer-link text-sm! font-semibold!">أسعار المعادن</a></li>
             <li><a routerLink="/currency-calculator" class="footer-link text-sm! font-semibold!">أسعار العملة</a></li>
             <li><a routerLink="/blogs" class="footer-link text-sm! font-semibold!">المقالات</a></li>
           </ul>
@@ -141,7 +141,8 @@
           
           <div class="flex items-center gap-2 text-white text-sm">
            
-            <span class="flex items-end gap-2">جميع الحقوق محفوظة بيت التكنولوجيا<img src="/images/logo/tech-house.webp" alt="" class="w-12 ">© 2026</span>
+            <span class="flex items-end gap-2">جميع الحقوق محفوظة بيت التكنولوجيا<a href="https://digitalbondmena.com/" target="_blank" rel="noopener noreferrer" class="cursor-pointer">
+              <img src="/images/logo/tech-house.webp" alt="" class="w-12 "> </a> © 2026</span>
           </div>
           <a routerLink="/privacy-policy" class="footer-lower-link cursor-pointer">سياسة الخصوصية</a>
         </div>
