--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -47,7 +47,7 @@
             (click)="selectedImage() && navigateToBlog()"></div>
         <div class="container h-full mx-auto px-5 lg:px-20 relative z-10 flex flex-col justify-center pt-20">
             <!-- Hero Text Content -->
-            <div class="text-right mb-8 lg:mb-12" 
+            <div class="text-right mb-2" 
                 [class.cursor-pointer]="selectedImage()"
                 (click)="selectedImage() && navigateToBlog()">
                 <!-- Skeleton for Title and Text while loading -->
@@ -77,7 +77,7 @@
                 }
             </div>
             <!-- Carousel Section -->
-            <div class="hero-carousel mt-auto py-10 min-h-55 md:min-h-70 lg:min-h-80"
+            <div class="hero-carousel mt-auto py-5 min-h-55 md:min-h-70 lg:min-h-80"
                 (mouseenter)="pauseCarousel()"
                 (mouseleave)="resumeCarousel()">
                 <!-- Show carousel only when data is fully loaded and images are preloaded -->
