--- a/src/app/shared/components/app-button/app-button.html
+++ b/src/app/shared/components/app-button/app-button.html
@@ -1,7 +1,7 @@
 @if (routerLink) {
     <button
         [routerLink]="routerLink"
-        [class]="customClass || 'px-5  py-2.5 bg-[#00843D] text-white font-medium text-lg rounded-xl flex items-center justify-center transition duration-300 cursor-pointer'">
+        [class]="customClass || 'px-5  py-2.5 bg-[#00843D] text-white font-medium text-lg rounded-xl flex items-center justify-center transition duration-300 cursor-pointer!'">
       {{ btnText }}
     </button>
   } @else {
